service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus
  name: quarkus
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: quarkus
  type: ClusterIP
